--- a/headphones/0-styles.css
+++ b/headphones/0-styles.css
@@ -21,7 +21,7 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #ffffff;
-    background-color: #071629;
+    background-color: #ffffff;
 }
   
 header {
@@ -35,6 +35,7 @@ header {
 .container {
     max-width: 1000px;
     width: 100%;
+    height: 100vh;
     margin: 0 auto;
     padding: 0 20px;
     text-align: center;
@@ -88,6 +89,11 @@ header {
     font-size: 2rem;
     margin: 200px 0 10px;
     font-weight: bold;
+}
+
+h2 {
+    font-size: 1.875rem;
+    color: #071629;
 }
   
 .hero p {
